--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
         <div id="ex2_content"></div>
       </div>
 
+      
       <div id="ex3" class="ex">
         <h5>Ex3 - Drag&Drop</h5>
         <div>
           <div id="ex3_one">
-            <div id="ex3_element">Content</div>
+            <div id="ex3_element" draggable="true"">Content</div>
           </div>
           <div id="ex3_two"></div>
         </div>
